Dubey | BDSHR-1327 | Running all tests under a single suite IntegrationTestSuite.