@@ -29,7 +29,8 @@ dependencies {
     testCompile project(":schema")
     testCompile project(":schema").sourceSets.test.output
 
-    testCompile testLibraries.junit,testLibraries.mockito,testLibraries.cassandra_unit,testLibraries.system_rules
+    testCompile testLibraries.junit,testLibraries.mockito,testLibraries.cassandra_unit,testLibraries.system_rules,
+            testLibraries.cp_suite
 }
 
 test {
@@ -45,8 +46,7 @@ test {
     minHeapSize = "512m"
     maxHeapSize = "1024m"
 
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
+    exclude '**/*IT.class'
 }
 
 configurations {
